@@ -16,7 +16,6 @@ package com.liferay.portal.captcha.simplecaptcha;
 
 import com.liferay.portal.kernel.captcha.Captcha;
 import com.liferay.portal.kernel.captcha.CaptchaException;
-import com.liferay.portal.kernel.captcha.CaptchaMaxChallengesException;
 import com.liferay.portal.kernel.captcha.CaptchaTextException;
 import com.liferay.portal.kernel.log.Log;
 import com.liferay.portal.kernel.log.LogFactoryUtil;
@@ -26,8 +25,8 @@ import com.liferay.portal.kernel.util.ContentTypes;
 import com.liferay.portal.kernel.util.InstancePool;
 import com.liferay.portal.kernel.util.ParamUtil;
 import com.liferay.portal.kernel.util.Validator;
+import com.liferay.portal.kernel.util.WebKeys;
 import com.liferay.portal.util.PropsValues;
-import com.liferay.portal.util.WebKeys;
 
 import java.io.IOException;
 
@@ -68,11 +67,10 @@ public class SimpleCaptchaImpl implements Captcha {
 		}
 
 		if (!validateChallenge(request)) {
-			incrementCounter(request);
-
-			checkMaxChallenges(request);
-
 			throw new CaptchaTextException();
+		}
+		else {
+			incrementCounter(request);
 		}
 
 		if (_log.isDebugEnabled()) {
@@ -87,11 +85,10 @@ public class SimpleCaptchaImpl implements Captcha {
 		}
 
 		if (!validateChallenge(portletRequest)) {
-			incrementCounter(portletRequest);
-
-			checkMaxChallenges(portletRequest);
-
 			throw new CaptchaTextException();
+		}
+		else {
+			incrementCounter(portletRequest);
 		}
 
 		if (_log.isDebugEnabled()) {
@@ -105,10 +102,10 @@ public class SimpleCaptchaImpl implements Captcha {
 	}
 
 	@Override
-	public boolean isEnabled(HttpServletRequest request)
-		throws CaptchaException {
-
-		checkMaxChallenges(request);
+	public boolean isEnabled(HttpServletRequest request) {
+		if (isExceededMaxChallenges(request)) {
+			return false;
+		}
 
 		if (PropsValues.CAPTCHA_MAX_CHALLENGES >= 0) {
 			return true;
@@ -119,10 +116,10 @@ public class SimpleCaptchaImpl implements Captcha {
 	}
 
 	@Override
-	public boolean isEnabled(PortletRequest portletRequest)
-		throws CaptchaException {
-
-		checkMaxChallenges(portletRequest);
+	public boolean isEnabled(PortletRequest portletRequest) {
+		if (isExceededMaxChallenges(portletRequest)) {
+			return false;
+		}
 
 		if (PropsValues.CAPTCHA_MAX_CHALLENGES >= 0) {
 			return true;
@@ -166,40 +163,6 @@ public class SimpleCaptchaImpl implements Captcha {
 		CaptchaServletUtil.writeImage(
 			resourceResponse.getPortletOutputStream(),
 			simpleCaptcha.getImage());
-	}
-
-	protected void checkMaxChallenges(HttpServletRequest request)
-		throws CaptchaMaxChallengesException {
-
-		if (PropsValues.CAPTCHA_MAX_CHALLENGES > 0) {
-			HttpSession session = request.getSession();
-
-			Integer count = (Integer)session.getAttribute(
-				WebKeys.CAPTCHA_COUNT);
-
-			checkMaxChallenges(count);
-		}
-	}
-
-	protected void checkMaxChallenges(Integer count)
-		throws CaptchaMaxChallengesException {
-
-		if ((count != null) && (count > PropsValues.CAPTCHA_MAX_CHALLENGES)) {
-			throw new CaptchaMaxChallengesException();
-		}
-	}
-
-	protected void checkMaxChallenges(PortletRequest portletRequest)
-		throws CaptchaMaxChallengesException {
-
-		if (PropsValues.CAPTCHA_MAX_CHALLENGES > 0) {
-			PortletSession portletSession = portletRequest.getPortletSession();
-
-			Integer count = (Integer)portletSession.getAttribute(
-				WebKeys.CAPTCHA_COUNT);
-
-			checkMaxChallenges(count);
-		}
 	}
 
 	protected BackgroundProducer getBackgroundProducer() {
@@ -289,10 +252,10 @@ public class SimpleCaptchaImpl implements Captcha {
 
 	protected Integer incrementCounter(Integer count) {
 		if (count == null) {
-			count = new Integer(1);
+			count = Integer.valueOf(1);
 		}
 		else {
-			count = new Integer(count.intValue() + 1);
+			count = Integer.valueOf(count.intValue() + 1);
 		}
 
 		return count;
@@ -384,6 +347,40 @@ public class SimpleCaptchaImpl implements Captcha {
 		}
 	}
 
+	protected boolean isExceededMaxChallenges(HttpServletRequest request) {
+		if (PropsValues.CAPTCHA_MAX_CHALLENGES > 0) {
+			HttpSession session = request.getSession();
+
+			Integer count = (Integer)session.getAttribute(
+				WebKeys.CAPTCHA_COUNT);
+
+			return isExceededMaxChallenges(count);
+		}
+
+		return false;
+	}
+
+	protected boolean isExceededMaxChallenges(Integer count) {
+		if ((count != null) && (count >= PropsValues.CAPTCHA_MAX_CHALLENGES)) {
+			return true;
+		}
+
+		return false;
+	}
+
+	protected boolean isExceededMaxChallenges(PortletRequest portletRequest) {
+		if (PropsValues.CAPTCHA_MAX_CHALLENGES > 0) {
+			PortletSession portletSession = portletRequest.getPortletSession();
+
+			Integer count = (Integer)portletSession.getAttribute(
+				WebKeys.CAPTCHA_COUNT);
+
+			return isExceededMaxChallenges(count);
+		}
+
+		return false;
+	}
+
 	protected boolean validateChallenge(HttpServletRequest request)
 		throws CaptchaException {
 
@@ -465,7 +462,8 @@ public class SimpleCaptchaImpl implements Captcha {
 	private static final String _TAGLIB_PATH =
 		"/html/taglib/ui/captcha/simplecaptcha.jsp";
 
-	private static Log _log = LogFactoryUtil.getLog(SimpleCaptchaImpl.class);
+	private static final Log _log = LogFactoryUtil.getLog(
+		SimpleCaptchaImpl.class);
 
 	private BackgroundProducer[] _backgroundProducers;
 	private GimpyRenderer[] _gimpyRenderers;
